test: h1 animation - attempt to fix cut-off on safari mobile of second word on first animation only

--- a/src/scss/components/_animations.scss
+++ b/src/scss/components/_animations.scss
@@ -26,7 +26,7 @@ $speedDelay: 0.1s;
 
 .word1,
 .word2 {
-  display: inline-block;
+  // display: inline-block;
   position: relative;
   grid-area: 1 / 2 / 1 / 2;
   text-align: start;
